0x0A-python-inheritance/tests/1-my_list.txt
The "1-my_list" module
======================

using "print_sorted" function
-----------------------------

Import the module
  >>> MyList = __import__('1-my_list').MyList

Create a list
  >>> my_list = MyList()

Check if it's Created
  >>> isinstance(my_list, list)
  True

Appending items:
  >>> my_list.append(1)
  >>> my_list.append(4)
  >>> my_list.append(2)
  >>> my_list.append(3)
  >>> my_list.append(5)

print list:
  >>> my_list.print_sorted()
  [1, 2, 3, 4, 5]

Test Appending infinity:
  >>> my_list.append(int('inf'))
  Traceback (most recent call last):
    File "<stdin>", line 1, in <module>
  ValueError: invalid literal for int() with base 10: 'inf'

Test negative numbers:
  >>> my_list.append(-1)
  >>> my_list.append(-2)
  >>> my_list.print_sorted()
  [-2, -1, 1, 2, 3, 4, 5]

Test same element:
  >>> my_list.clear()
  >>> my_list.append(10)
  >>> my_list.append(10)
  >>> my_list.append(10)
  >>> my_list.append(10)
  >>> my_list.append(10)
  >>> my_list.print_sorted()
  [10, 10, 10, 10, 10]

Test None:
  >>> my_list.append(None)
  >>> my_list.print_sorted()
  Traceback (most recent call last):
    File "<stdin>", line 1, in <module>
    File "/home/alaa/Code/alx-higher_level_programming/0x0A-python-inheritance/1-my_list.py", line 19, in print_sorted
      print(sorted(self))
            ^^^^^^^^^^^^
  TypeError: '<' not supported between instances of 'NoneType' and 'int'

Test Null:
  >>> my_list.append(NULL)
  Traceback (most recent call last):
    File "<stdin>", line 1, in <module>
  NameError: name 'NULL' is not defined
